@@ -4,8 +4,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-DESCRELATEDITEMS="This Module displays other Articles that are related to the one currently being viewed. These relations are established by the Meta Keywords. <br />All the keywords of the current Article are searched against all the keywords of all other published Articles. For example, you may have an Article on "Breeding Parrots" and another on "Hand Raising Black Cockatoos". If you include the keyword "parrot" in both Articles, then the Related Items Module will list the "Breeding Parrots" Article when viewing "Hand Raising Black Cockatoos" and vice-versa."
+MOD_RELATED_XML_DESCRIPTION="This Module displays other Articles that are related to the one currently being viewed. These relations are established by the Meta Keywords. <br />All the keywords of the current Article are searched against all the keywords of all other published Articles. For example, you may have an Article on "Breeding Parrots" and another on "Hand Raising Black Cockatoos". If you include the keyword "parrot" in both Articles, then the Related Items Module will list the "Breeding Parrots" Article when viewing "Hand Raising Black Cockatoos" and vice-versa."
 MOD_RELATED_ITEMS="Articles - Related Articles"
 RELATED ITEMS="Related Articles"
-SHOW DATE="Show Date"
-SHOW/HIDE DATE="Show/Hide Date"
+MOD_RELATED_FIELD_SHOWDATE_LABEL="Show Date"
+MOD_RELATED_FIELD_SHOWDATE_DESC="Show/Hide Date"
