@@ -12,7 +12,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6.0</version>
-	<description>DESCRELATEDITEMS</description>
+	<description>MOD_RELATED_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			module="mod_related_items">mod_related_items.php</filename>
@@ -30,12 +30,12 @@
 			name="showDate"
 			type="radio"
 			default="0"
-			label="Show date"
-			description="Show/Hide date">
+			label="MOD_RELATED_FIELD_SHOWDATE_LABEL"
+			description="MOD_RELATED_FIELD_SHOWDATE_DESC">
 			<option
-				value="0">Hide</option>
+				value="0">JHIDE</option>
 			<option
-				value="1">Show</option>
+				value="1">JSHOW</option>
 		</field>
 	</fields>
 	<fields
