@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+11-Feb-2010 jean-Marie Simonet
+^ Refactored mod_related_items ini/keys
+
 11-Feb-2010 Christophe Demko
 ^ Use $db->getNullDate for calendar fields which are empty
 ^ Recommit patch 14775
